--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextcss/reset": "^0.2.2-beta",
+    "@styled-jsx/plugin-sass": "^4.0.2",
+    "autoprefixer": "^10.4.12",
+    "classnames": "^2.3.2",
+    "gsap": "^3.11.3",
+    "lodash": "^4.17.21",
     "next": "12.3.1",
+    "postcss": "^8.4.18",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
