Implement interactive animation in Footer.

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@nextcss/reset": "^0.2.2-beta",
     "@styled-jsx/plugin-sass": "^4.0.2",
+    "@types/d3": "^7.4.0",
+    "@types/matter-js": "^0.18.2",
     "autoprefixer": "^10.4.12",
     "classnames": "^2.3.2",
+    "d3": "^7.6.1",
     "gsap": "^3.11.3",
     "lodash": "^4.17.21",
+    "matter-js": "^0.18.0",
     "next": "12.3.1",
     "postcss": "^8.4.18",
     "react": "18.2.0",
