--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.31.1",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
